<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KiiGeoCoupon</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered?</string>
    <string name="signup">Sign Up!</string>
    <string name="re_password">Confirm password</string>
    <string name="scan_coupons">Scan coupons</string>
    <string name="view_coupons">View coupons</string>
    <string name="map">Map</string>
    <string name="results">Results</string>
    <string name="company">Company:</string>
    <string name="product">Product:</string>
    <string name="discount_code">Discount Code:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="redeem_coupon">Redeem coupon?</string>
    <string name="click_scan">Click below to scan a coupon</string>

</resources>
