<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding" >

        <LinearLayout
            android:id="@+id/login_fragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/fullNameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/pwdField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
            
                    <LinearLayout
            android:id="@+id/login_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/loginButton"
                style="@style/KiiButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/social_person"
                android:text="@string/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/not_registered" />

                <Button
                    android:id="@+id/switchButton"
                    style="@style/KiiButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/content_edit"
                    android:text="@string/signup" />

            </LinearLayout>
		</LinearLayout>

		<LinearLayout
		    android:id="@+id/signup_area"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:visibility="gone" >

			<EditText
			    android:id="@+id/editText1"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:hint="@string/re_password"
			    android:inputType="textPassword" />

			<Button
			    android:id="@+id/signupButton"
			    style="@style/KiiButton"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:drawableLeft="@drawable/content_edit"
			    android:text="@string/signup" />
			        
            </LinearLayout>
        </LinearLayout>



</ScrollView>