<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/coupon_view"
    android:background="@drawable/coupon_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/padding"
    android:showDividers="end" >

    <ImageView
        android:id="@+id/couponImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:padding="@dimen/padding" />

<LinearLayout 
    android:id="@+id/LinearLayout2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/company"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/product"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/discount_code"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/discountCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />



</LinearLayout>


</LinearLayout>
